Exploratory coding with AJAX, van. JS, and React" "

--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,6 +5,7 @@
   <script src="{% static "react.js" %}"></script>
   <script src="{% static "react-dom.js" %}"></script>
   <script src="{% static "browser.min.js" %}"></script>
+  Access-Control-Allow-Origin: *
 </head>
 <body>
 
@@ -20,29 +20,135 @@ WHATUPS UP&nbsp; {{ user.username }}?<br>
 {% block content %}
 {% endblock %}
 
+  <div id="demo"></div>
+  <div id="container">
+    
+  </div>
+  <script type="text/babel">
+  var App = React.createClass({
 
-<div id="app"></div>
-<script type="text/babel">
-
-  var Movie = React.createClass({
     render: function() {
       return (
         <div>
-          <h1>{this.props.title}</h1>
-          <h2>{this.props.genre}</h2>
+          <p>{% if user.is_authenticated %}
+                User ID inside react render div: {{user.id}}
+              {% endif %}
+          </p>
         </div>
       );
     }
   });
 
-  ReactDOM.render(
-    <div>
-    <Movie title="Who's Afraid of Virginia Wolfe?" genre="Drama" />
-    <Movie title="Nightcrawler" genre="Suspense" />
-    <Movie title="Hackers" genre="Action/Teen" />
-    </div>
-    , document.getElementById('app'));
-</script>
+
+  ReactDOM.render(<App />, document.getElementById('container'));
+
+  </script>
+  <script type="application/javascript">
+    console.log("hi")
+    function Get(yourUrl) {
+      var Httpreq = new XMLHttpRequest(); // a new request
+      Httpreq.open("GET", yourUrl, false);
+      Httpreq.send(null);
+      return Httpreq.responseText;
+    }
+    document.getElementById("demo").innerHTML = (Get('/urart/api/?format=json'))
+  </script>
+
+
+  //   <script type="text/babel">
+
+  //     var Comment = React.createClass({
+  //       getInitialState: function() {
+  //         return {editing: false}
+  //       },
+  //       edit: function() {
+  //         this.setState({editing: true});
+  //       },
+  //       remove: function() {
+  //         console.log('Removing comment');
+  //         this.props.deleteFromBoard(this.props.index)
+  //       },
+  //       save: function () {
+  //         this.props.updateCommentText(this.refs.newText.value, this.props.index);
+  //         this.setState({editing: false});
+  //       },
+
+  //       renderNormal: function () {
+  //         return (
+  //           <div className="commentContainer">
+  //             <div className="commentText">{this.props.children}</div>
+  //             <button onClick={this.edit} className="button-primary">Edit</button>
+  //             <button onClick={this.remove} className="button-danger">Remove</button>
+  //           </div>
+  //         );
+  //       },
+
+  //       renderForm: function() {
+  //         return (
+  //           <div className="commentContainer">
+  //             <textarea ref="newText" defaultValue={this.props.children}></textarea>
+  //             <button onClick={this.save} className="button-success">Save</button>
+  //           </div>
+  //         );
+  //       },
+  //       render: function () {
+  //         if(this.state.editing) {
+  //           return this.renderForm();
+  //         } else {
+  //           return this.renderNormal();
+  //         }
+  //       }
+  //     });
+
+  //     var Board = React.createClass({
+  //       getInitialState: function() {
+  //         return {
+  //           comments: []
+  //         }
+  //       },
+
+  //       add: function(text) {
+  //         var arr = this.state.comments;
+  //         arr.push(text);
+  //         this.setState({comments: arr})
+  //       },
+
+  //       removeComment: function(i) {
+  //         console.log('Removing comment: ' + i);
+  //         var arr = this.state.comments;
+  //         arr.splice(i, 1);
+  //         this.setState({comments: arr})
+  //       },
+
+  //       updateComment: function(newText, i) {
+  //         console.log('Updating comment');
+  //         var arr = this.state.comments;
+  //         arr[i] = newText;
+  //         this.setState({comments: arr})
+  //       },
+
+  //       eachComment: function (text, i){
+  //                 return (
+  //                   <Comment key={i} index={i} updateCommentText={this.updateComment} deleteFromBoard={this.removeComment}>
+  //                     {text}
+  //                   </Comment>
+  //                 );
+  //       },
+
+  //       render: function () {
+  //         return (
+  //           <div>  
+  //             <button onClick={this.add.bind(null, "Add comment here")} className="button-info create">Add New</button>
+  //             <div className="board">
+  //               {this.state.comments.map(this.eachComment)}
+  //             </div>
+  //           </div>
+  //         );
+  //       }
+  //     });
+
+  //     ReactDOM.render(<Board />, document.getElementById('container'));
+  // </script>
 
 
 
